--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Fitter Happier Text</title>
+  <title>four years later</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       font-family: 'Avenir Next', 'AvenirNext-SemiBold', 'Futura-Medium', Futura, 'Futura Std', 'Trebuchet MS', Helvetica, Arial, sans-serif;
       font-weight: 600;
       text-transform: uppercase;
-      letter-spacing: .2em;
+      letter-spacing: .2em
       line-height: 1.5;
       padding: 1em 1.5em;
       margin: 0 auto;
       color: rgba(255,255,255,.8);
       background-color: #f40;
-      background-image: linear-gradient(#f40, #f37);
+      background-image: linear-gradient(#53186b, #0c5594);
+
     }
     @media (min-width: 40em) {
       body {
@@ -94,77 +95,66 @@
 <body>
 
   <header class="py2">
-    <div data-fitter-happier-text class="">Fitter Happier Text</div>
+    <div data-fitter-happier-text class="">a year later</div>
     <p>
-      Performant, fully fluid headings
+      I still miss her like a little bitch
       <br class="xs-show">
-      <a href="http://github.com/jxnblk/fitter-happier-text">View on Github</a>
+      <a href="http://github.com/nickolaas/fitter-happier-text">GitHub Fork</a>
     </p>
-  </header>
-
-  <div class="table">
-    <div class="table-cell py2">
-      <iframe src="https://ghbtns.com/github-btn.html?user=jxnblk&repo=fitter-happier-text&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-via="jxnblk" data-size="large">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </div>
-    <div class="table-cell right-align">
-      <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1696&serve=CVYD42T&placement=jxnblkcom" id="_carbonads_js"></script>
-    </div>
-  </div>
+    </header>
 
 
   <section class="py2">
-    <div data-fitter-happier-text class="">Fitter, happier, more productive</div>
-    <div data-fitter-happier-text class="">Comfortable</div>
-    <div data-fitter-happier-text class="">Not drinking too much</div>
-    <div data-fitter-happier-text class="">Regular exercise at the gym</div>
-    <div data-fitter-happier-text class="">(Three days a week)</div>
-    <div data-fitter-happier-text class="">Getting on better with your associate employee contemporaries</div>
-    <div data-fitter-happier-text class="">At ease</div>
-    <div data-fitter-happier-text class="">Eating well</div>
-    <div data-fitter-happier-text class="">(No more microwave dinners and saturated fats)</div>
-    <div data-fitter-happier-text class="">A patient better driver</div>
-    <div data-fitter-happier-text class="">A safer car</div>
-    <div data-fitter-happier-text class="">(Baby smiling in back seat)</div>
-    <div data-fitter-happier-text class="">Sleeping well</div>
-    <div data-fitter-happier-text class="">(No bad dreams)</div>
-    <div data-fitter-happier-text class="">No paranoia</div>
-    <div data-fitter-happier-text class="">Careful to all animals</div>
-    <div data-fitter-happier-text class="">(Never washing spiders down the plughole)</div>
-    <div data-fitter-happier-text class="">Keep in contact with old friends</div>
-    <div data-fitter-happier-text class="">(Enjoy a drink now and then)</div>
-    <div data-fitter-happier-text class="">Will frequently check credit at (moral) bank (hole in the wall)</div>
-    <div data-fitter-happier-text class="">Favors for favors</div>
-    <div data-fitter-happier-text class="">Fond but not in love</div>
-    <div data-fitter-happier-text class="">Charity standing orders</div>
-    <div data-fitter-happier-text class="">On Sundays ring road supermarket</div>
-    <div data-fitter-happier-text class="">(No killing moths or putting boiling water on the ants)</div>
-    <div data-fitter-happier-text class="">Car wash</div>
-    <div data-fitter-happier-text class="">(Also on Sundays)</div>
-    <div data-fitter-happier-text class="">No longer afraid of the dark or midday shadows</div>
-    <div data-fitter-happier-text class="">Nothing so ridiculously teenage and desperate</div>
-    <div data-fitter-happier-text class="">Nothing so childish, at a better pace</div>
-    <div data-fitter-happier-text class="">Slower and more calculated</div>
-    <div data-fitter-happier-text class="">No chance of escape</div>
-    <div data-fitter-happier-text class="">Now self-employed</div>
-    <div data-fitter-happier-text class="">Concerned (but powerless)</div>
-    <div data-fitter-happier-text class="">An empowered and informed member of society</div>
-    <div data-fitter-happier-text class="">(Pragmatism not idealism)</div>
-    <div data-fitter-happier-text class="">Will not cry in public</div>
-    <div data-fitter-happier-text class="">Less chance of illness</div>
-    <div data-fitter-happier-text class="">Tires that grip in the wet</div>
-    <div data-fitter-happier-text class="">(Shot of baby strapped in back seat)</div>
-    <div data-fitter-happier-text class="">A good memory</div>
-    <div data-fitter-happier-text class="">Still cries at a good film</div>
-    <div data-fitter-happier-text class="">Still kisses with saliva</div>
-    <div data-fitter-happier-text class="">No longer empty and frantic like a cat tied to a stick</div>
-    <div data-fitter-happier-text class="">That's driven into frozen winter shit</div>
-    <div data-fitter-happier-text class="">(The ability to laugh at weakness)</div>
-    <div data-fitter-happier-text class="">Calm</div>
-    <div data-fitter-happier-text class="">Fitter</div>
-    <div data-fitter-happier-text class="">Healthier and more productive</div>
-    <div data-fitter-happier-text class="">A pig in a cage on antibiotics</div>
+    <div data-fitter-happier-text class="">i'm always thinking about useless things</div>
+    <div data-fitter-happier-text class="">i'm always checking out</div>
+    <div data-fitter-happier-text class="">i'm always bothering myself to bits</div>
+    <div data-fitter-happier-text class="">i'm always checking out</div>
+    <div data-fitter-happier-text class="">forget it</div>
+    <div data-fitter-happier-text class="">nothing i change changes anything</div>
+    <div data-fitter-happier-text class="">i wont let it</div>
+    <div data-fitter-happier-text class="">i only take up a little of the collapsing space</div>
+    <div data-fitter-happier-text class="">i better cut this off</div>
+    <div data-fitter-happier-text class="">don't wanna fuck it up</div>
+    <div data-fitter-happier-text class="">i try to save it for a rainy day</div>
+    <div data-fitter-happier-text class="">it's raining all the time</div>
+    <div data-fitter-happier-text class="">until everything is less insane</div>
+    <div data-fitter-happier-text class="">i'm mixing xanax and wine</div>
+    <div data-fitter-happier-text class="">i can't stay in</div>
+    <div data-fitter-happier-text class="">and i can't come back</div>
+    <div data-fitter-happier-text class="">i just keep awake</div>
+    <div data-fitter-happier-text class="">and i wont react</div>
+    <div data-fitter-happier-text class="">it's alright</div>
+    <div data-fitter-happier-text class="">never</div>
+    <div data-fitter-happier-text class="">never look her in the eyes</div>
+    <div data-fitter-happier-text class="">never tell the truth</div>
+    <div data-fitter-happier-text class="">don't talk about reasons why you don't wanna talk about reasons why you don't wanna talk</div>
+    <div data-fitter-happier-text class="">standing at the punch table swallowing punch</div>
+    <div data-fitter-happier-text class="">better get my shit together</div>
+    <div data-fitter-happier-text class="">better gather my shit in</div>
+    <div data-fitter-happier-text class="">karen put me in a chair</div>
+    <div data-fitter-happier-text class="">fuck me and make me a drink</div>
+    <div data-fitter-happier-text class="">put an ocean and a river</div>
+    <div data-fitter-happier-text class="">between everybody ever</div>
+    <div data-fitter-happier-text class="">parking your car, you said</div>
+    <div data-fitter-happier-text class="">'i'm overwhelmed'</div>
+    <div data-fitter-happier-text class="">you said 'i think i'm like Tennessee Williams'</div>
+    <div data-fitter-happier-text class="">let me waste your time</div>
+    <div data-fitter-happier-text class="">everything i love is on the table</div>
+    <div data-fitter-happier-text class="">i'm not alone</div>
+    <div data-fitter-happier-text class="">try to hold it together until our friends are gone</div>
+    <div data-fitter-happier-text class="">i miss you</div>
+    <div data-fitter-happier-text class="">i wasn't a catch, i wasn't a keeper</div>
+    <div data-fitter-happier-text class="">walking around like i'm the one who found dead john cheever)</div>
+    <div data-fitter-happier-text class="">you said 'we're not so tied together'</div>
+    <div data-fitter-happier-text class="">what did you mean?</div>
+    <div data-fitter-happier-text class="">why are we still out here?</div>
+    <div data-fitter-happier-text class="">can't we just go home?</div>
+    <div data-fitter-happier-text class="">nothing i do makes me feel different</div>
+    <div data-fitter-happier-text class="">the more level they have me</div>
+    <div data-fitter-happier-text class="">the more i cannot stand me</div>
+    <div data-fitter-happier-text class="">i have no positions</div>
+    <div data-fitter-happier-text class="">no point of view or vision</div>
+    <div data-fitter-happier-text class="">i'm just trying to stay in touch with anything i'm still in touch with</div>
   </section>
 
   <section class="py2">
@@ -190,7 +180,7 @@ fitterHappierText(nodes);
       For a Gulpjs-based preprocessed example, see the README on Github.
       -->
     </small></p>
-    <h1><a href="http://github.com/jxnblk/fitter-happier-text">View on Github</a></h1>
+    <h1><a href="http://github.com/nickolaas/fitter-happier-text">View on Github</a></h1>
   </section>
 
   <footer class="py2">
@@ -201,11 +191,11 @@ fitterHappierText(nodes);
       <br class="xs-show">
       <br class="xs-show">
       Lyrics by
-      <a href="https://www.youtube.com/watch?v=laoq1eeIUxQ">Radiohead</a>
+      <a href="https://google.com">The National</a>
       &nbsp;
       <br class="xs-show">
       <br class="xs-show">
-      <a href="http://jxnblk.com">Made by Jxnblk</a>
+      <a href="http://jxnblk.com">Fork from jxnblk</a>
     </p>
   </footer>
 
